cabal-version:      2.4
name:               cipher
version:            0.1.0.0

author:             jordan-verschoor
maintainer:         JBLDSKY@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable cipher
    main-is:          Main.hs
    other-modules:    Cli
    build-depends:
        base ^>=4.16.4.0,
        cipher,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010
